# game_engine

./: .gitignore  CMakeLists.txt  README.md  main.cpp
event/: button_event.h  common_event.h  event.h  includes.h  observer_object.h
helping/: function_with_delay.h  helping_math.h  includes.h  math.h  perfect_collision.h  sat_collision.h  sat_math.h  scale.h  structs.h  type_class.h  type_func.h  window.h
info_classes/: info.h  info_functions.h
object_classes/: convex_object.h  game_object.h  game_objects.h  gui_object.h  gui_objects.h  object.h  parent_object.h
object_parameters/: draw.h  move.h  scale.h
objects/: includes.h
objects/figures/: bezier.h  convex.h  figure_object.h  includes.h  line.h
objects/gui/: button.h  gui_object.h  includes.h  label.h  radio_button.h  slider.h
objects/mixins/: clickable.h  draggable.h  drawable.h  hoverable.h  includes.h  movable.h  scalable.h
objects/mixins/drawable/: class.h
objects/mixins/scalable/: class.h  includes.h  methods.h
objects/parent/: abstract_object.h  composite_object.h  includes.h  object.h
settings/: constants_and_defines.h  library.h  pre_loaded.h  project_files.h  prototype.h  texture.h  textures.h  window.h
stages/: main_menu.h  parent_stage_class.h
stages/detail_bezier/: events.h  stage.h  textures.h
stages/draw_bezier/: events.h  stage.h  textures.h
stages/game/: events.h  game.h  gui.h
stages/main_menu/: events.h  gui.h  main_menu.h  textures.h
